+ IP del usuario al detectar nueva sesion + Notificacion al enviar mensaje privado

--- a/postman/templates/postman/base_folder.html
+++ b/postman/templates/postman/base_folder.html
@@ -26,7 +26,7 @@ in the INSTALLED_APPS setting.
             <li onclick="window.location.href='{% url 'postman:archives' %}'">{% trans "Archives" %} <i class="material-icons right">folder_special</i></li>
             <li class="blue lighten-5">Contactos ({{ friends_top12|length }})</li>
             {% for item in friends_top12 %}
-                <li class="blue lighten-5" onclick="window.location.href='/messages/write/{{ item.username }}'"><i
+                <li class="blue lighten-5" onclick="window.location.href='/messages/write/{{ item.title }}'"><i
                         class="material-icons right">account_circle</i>({{ item.title }})
                 </li>
             {% endfor %}
