--- a/skyfolk/templates/account/email.html
+++ b/skyfolk/templates/account/email.html
@@ -16,6 +16,7 @@
 {% endblock %}
 
 {% block cf-form %}
+    {% comment %}
     {% if messages %}
         <div class="div-messages">
             <strong>{% trans "Messages" %}:</strong>
@@ -26,6 +27,7 @@
             </ul>
         </div>
     {% endif %}
+    {% endcomment %}
     <h1 class="title-email">{% trans "E-mail Addresses" %}</h1>
     {% if user.emailaddress_set.all %}
         <p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
