--- a/skyfolk/templates/account/reccomendation_after_login.html
+++ b/skyfolk/templates/account/reccomendation_after_login.html
@@ -16,7 +16,7 @@
                 <div class="col s12 m12 l4">
                     <div class="card white">
                         <div class="card-content">
-                            {% avatar item.title 90 %}
+                            {% avatar item.title %}
                             <span class="card-title grey-text darken-1">
                                 <a>{{ item.title }}</a>
                             </span>
