--- a/postman/templates/postman/base_write.html
+++ b/postman/templates/postman/base_write.html
@@ -26,7 +26,7 @@
             <li onclick="window.location.href='{% url 'postman:archives' %}'">{% trans "Archives" %} <i class="material-icons right">folder_special</i></li>
             <li class="blue lighten-5">Contactos ({{ friends_top12|length }})</li>
             {% for item in friends_top12 %}
-                <li class="blue lighten-5" onclick="window.location.href='/messages/compose/{{ item.title }}'"><i
+                <li class="blue lighten-5" onclick="window.location.href='/messages/write/{{ item.title }}'"><i
                         class="material-icons right">account_circle</i>({{ item.title }})
                 </li>
             {% endfor %}
@@ -41,18 +41,21 @@
                           method="post">{% csrf_token %}
                         {% block pm_write_recipient %}{% endblock %}
                         <div class="row">
+                            {{ form.recipients.errors }}
                             <div class="input-field col s12">
                                 {{ form.recipients }}
                                 <label for="id_recipients">{{ form.recipients.label }}</label>
                             </div>
                         </div>
                         <div class="row">
+                            {{ form.subject.errors }}
                             <div class="input-field col s12">
                                 {{ form.subject }}
                                 <label for="id_subject">{{ form.subject.label }}</label>
                             </div>
                         </div>
                         <div class="row">
+                            {{ form.body.errors }}
                             <div class="input-field col s12">
                                 <textarea id="id_body" name="body" rows="12" cols="55"
                                           class="materialize-textarea"></textarea>
