--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -2,6 +2,7 @@
   Base para el head de la pagina (menu horizontal con busqueda etc...)
 {% endcomment %}
 {% load notification_tags %}
+{% load compress %}
 {% comment %}
 <nav class="box-tool">
     <ul class="box-tool-wrapper">
@@ -56,12 +57,14 @@
     {% include "account/notification-right-menu.html" %}
 </div>
 <li id="loader"></li>
-<script async src="{{ STATIC_URL }}js/core.js" type="text/javascript"></script>
-<script src="{{ STATIC_URL }}js/jquery.shorten.1.0.js" type="text/javascript"></script>
-<script src="{{ STATIC_URL }}js/jquery.textcomplete.min.js" type="text/javascript"></script>
-<script src="{{ STATIC_URL }}js/jquery.shorten.1.0.js" type="text/javascript"></script>
-<script src="{{ STATIC_URL }}js/materialize.min.js" type="text/javascript"></script>
-
+{% compress js %}
+    <script src="{{ STATIC_URL }}js/core.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}js/jquery.shorten.1.0.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}js/jquery.textcomplete.min.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}js/jquery.shorten.1.0.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}js/materialize.min.js" type="text/javascript"></script>
+    <script async src="{{ STATIC_URL }}dist/sweetalert.min.js" type="text/javascript"></script>
+{% endcompress %}
 <!-- <script async src="{{STATIC_URL}}js/jquery.textcomplete.js"></script> -->
 <!-- Mentions -->
 <!--
@@ -69,8 +72,8 @@
     <script src="{{STATIC_URL}}js/mentions/mention.js"></script>
   -->
 <!-- Sweet Alert -->
-
-<link rel="stylesheet" href="{{ STATIC_URL }}dist/sweetalert.css" onload="if(media!='all')media='all'">
-<link rel="stylesheet" href="{{ STATIC_URL }}emoji/css/textarea_find_emoji.css" onload="if(media!='all')media='all'">
-<link rel="stylesheet" href="{{ STATIC_URL }}themes/google/google.css" onload="if(media!='all')media='all'">
-<script async src="{{ STATIC_URL }}dist/sweetalert.min.js" type="text/javascript"></script>
+{% compress css %}
+<link rel="stylesheet" href="{{ STATIC_URL }}dist/sweetalert.css">
+<link rel="stylesheet" href="{{ STATIC_URL }}emoji/css/textarea_find_emoji.css">
+<link rel="stylesheet" href="{{ STATIC_URL }}themes/google/google.css">
+{% endcompress %}
