--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -2,6 +2,7 @@
 Base para la interfaz en comun de todos los usuarios.
 {% endcomment %}
 {% load static %}
+{% load compress %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -10,15 +11,19 @@ Base para la interfaz en comun de todos los usuarios.
     <meta name="keywords" content="Mi perfil, Mensajes, Amigos, Seguidores, Comentarios">
     <meta name="viewport" content="width=device-width, maximum-scale=3, minimum-scale=0.5">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/core.css" onload="if(media!=='all')media='all'">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/materialize.min.css" onload="if(media!=='all')media='all'">
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/buscar.css" onload="if(media!=='all')media='all'">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/font-awesome.min.css">
-    <link rel="stylesheet" href="{{ STATIC_URL }}fonts/iconfont/material-icons.css">
+    {% compress css %}
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/core.css">
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/materialize.min.css" >
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/buscar.css" >
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}fonts/iconfont/material-icons.css">
+        <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.atwho.min.css">
+    {% endcompress %}
     <link rel="icon" type="image/ico" href="{{ STATIC_URL }}img/favicon.ico"/>
+    {% compress js %}
     <script src="{{ STATIC_URL }}js/jquery-3.1.0.min.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}js/jquery-migrate-1.4.1.min.js" type="text/javascript"></script>
-
+    {% endcompress %}
     {% block title %} <title>Skyfolk - Bienvenido.</title> {% endblock %}
     {% block extra-js %}{% endblock %}
     <!-- bloques de estilos para cada pagina -->
@@ -289,10 +294,11 @@ Base para la interfaz en comun de todos los usuarios.
         {% endcomment %}
 {% include "account/mobile-menu.html" %}
 {% block footer %}
+    {% compress js %}
     <script src="{{ STATIC_URL }}emoji/js/textarea_find_emoji.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.atwho.min.css">
     <script src="{{ STATIC_URL }}js/jquery.caret.min.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}js/jquery.atwho.min.js" type="text/javascript"></script>
+    {% endcompress %}
 {% endblock %}
 </body>
 </html>
