--- a/skyfolk/templates/account/notification-right-menu.html
+++ b/skyfolk/templates/account/notification-right-menu.html
@@ -3,13 +3,15 @@ Menu de notificaciones verticales
 {% endcomment %}
 {% load humanize %}
 {% load avatar_tags %}
-<script src="{{ STATIC_URL }}js/reconnecting-websocket.min.js"></script>
-<script src="{{ STATIC_URL }}js/socket_notifications.js" type="text/javascript"></script>
-<script>
-    UTILS_N.init([{{ user.pk }}]);
-    UTILS_N.conn_socket();
-</script>
-
+{% load compress %}
+{% compress js %}
+    <script src="{{ STATIC_URL }}js/reconnecting-websocket.min.js"></script>
+    <script src="{{ STATIC_URL }}js/socket_notifications.js" type="text/javascript"></script>
+    <script>
+        UTILS_N.init([{{ user.pk }}]);
+        UTILS_N.conn_socket();
+    </script>
+{% endcompress %}
 <!-- MENU VERTICAL CON NOTIFICACIONES  -->
 <div id="notification-menu" class="side-nav nav-vertical-and-chat">
     <ul id="list-notify" class="collection">
