--- a/photologue/templates/photologue/photo_detail.html
+++ b/photologue/templates/photologue/photo_detail.html
@@ -155,10 +155,12 @@
             </div>
         </div>
     </div>
-    <script async src="{{ STATIC_URL }}js/photo_gallery.js" type="text/javascript"></script>
-    <script async src="{{ STATIC_URL }}js/photo_detail.js" type="text/javascript"></script>
+    {% compress js %}
+    <script src="{{ STATIC_URL }}js/photo_gallery.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}js/photo_detail.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}js/socket_photo.js"></script>
     <script src="{{ STATIC_URL }}js/reconnecting-websocket.min.js"></script>
+    {% endcompress %}
     <script>
         UTILS.init([{{ user.pk }}]);
         UTILS.conn_socket();
