--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -63,7 +63,7 @@
     <script src="{{ STATIC_URL }}js/jquery.textcomplete.min.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}js/jquery.shorten.1.0.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}js/materialize.min.js" type="text/javascript"></script>
-    <script async src="{{ STATIC_URL }}dist/sweetalert.min.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}dist/sweetalert.min.js" type="text/javascript"></script>
 {% endcompress %}
 <!-- <script async src="{{STATIC_URL}}js/jquery.textcomplete.js"></script> -->
 <!-- Mentions -->
