--- a/photologue/templates/photologue/photo_detail.html
+++ b/photologue/templates/photologue/photo_detail.html
@@ -3,6 +3,7 @@
 {% load photologue_tags i18n %}
 {% load i18n %}
 {% load humanize %}
+{% load compress %}
 {% block title %} <title>{{ object.title }} por: {{ object.owner }}</title> {% endblock %}
 
 {% block include_files %}
