--- a/photologue/templates/photologue/photo_gallery.html
+++ b/photologue/templates/photologue/photo_gallery.html
@@ -222,7 +222,7 @@
     </div> <!-- end wrapper -->
     {% block js-gallery %}
         {{ block.super }}
-        <script async src="{{ STATIC_URL }}js/photo_gallery.js" type="text/javascript"></script>
+        <script src="{{ STATIC_URL }}js/photo_gallery.js" type="text/javascript"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/cropper.min.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/main.js"></script>
         <script src="{{ STATIC_URL }}el-pagination/js/el-pagination.js"></script>
