+ Multiple images for publication

--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -82,7 +82,7 @@ Base para la interfaz en comun de todos los usuarios.
                                         class="material-icons right">close</i></button>
                                 <div class="file-field input-field">
                                   <div class="btn">
-                                    <span>File</span>
+                                    <span>Imágenes</span>
                                     <input id="id_image" name="image" type="file" multiple>
                                   </div>
                                   <div class="file-path-wrapper">
@@ -130,8 +130,8 @@ Base para la interfaz en comun de todos los usuarios.
                                     class="material-icons right">close</i></button>
                             <div class="file-field input-field">
                               <div class="btn">
-                                <span>File</span>
-                                <input id="id_image" name="image" type="file" multiple>
+                                <span>Imágenes</span>
+                                <input id="id_image_self" name="image" type="file" multiple>
                               </div>
                               <div class="file-path-wrapper">
                                 <input class="file-path validate" type="text" placeholder="Upload one or more files">
