--- a/skyfolk/templates/account/notification-right-menu.html
+++ b/skyfolk/templates/account/notification-right-menu.html
@@ -15,8 +15,8 @@ Menu de notificaciones verticales
 <!-- MENU VERTICAL CON NOTIFICACIONES  -->
 <div id="notification-menu" class="side-nav nav-vertical-and-chat">
     <ul id="list-notify" class="collection">
-        {% if notifications %}
-            {% for notification in notifications %}
+        {% if user_notifications %}
+            {% for notification in user_notifications %}
                 <li class="collection-item avatar" data-id="{{ notification.id }}">
                     <a onclick="AJAX_mark_read(this)" class="fa fa-remove" id="mark-as-read-notification"
                        data-notification="{{ notification.slug }}"></a>
