--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -65,8 +65,8 @@
                                             {% comment %} Para publicaciones que contienen citas {% endcomment %}
                                             <style>
                                                 .card-content img {
-                                                    width: 70px;
-                                                    height: 70px;
+                                                    max-width: 100%;
+                                                    max-height: 100%;
                                                     box-shadow: 0 1px 5px rgba(30, 136, 229, 0.15);
                                                 }
 
@@ -77,19 +77,35 @@
                                             </style>
                                             <div class="card grey lighten-5">
                                                 <div class="card-content black-text">
-                                                    {% avatar node.shared_publication.publication.author %}<br>
+                                                    {% avatar node.shared_publication.publication.author class="POLE" %}<br>
                                                     <span class="card-title"><a
                                                             href="{% url 'user_profile:profile' node.shared_publication.publication.author %}">@{{ node.shared_publication.publication.author }}</a>
                                                         <i class="blue-text text-darken-2"> {{ node.shared_publication.publication.created|naturaltime }}</i></span>
                                                     <p>{{ node.shared_publication.publication.content|safe }}</p>
-                                                    {% if node.shared_publication.publication.image %}
-                                                    <br>
-                                                    <div class="row">
-                                                        <div class="col s7">
-                                                            <img class="responsive-img" src="{{node.shared_publication.publication.image.url}}" alt="Imagen de: {{ node.shared_publication.publication.author }}" title="Imagen de: {{ node.shared_publication.publication.author }}">
+                                                    {% with node.shared_publication.publication.images.all as images %}
+                                                        {% if images %}<br>
+                                                        <div class="row">
+                                                        {% for image in images %}
+                                                            <div class="col s4">
+                                                                <img class="responsive-img z-depth-2" src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
+                                                            </div>
+                                                        {% endfor %}
                                                         </div>
-                                                    </div>
-                                                    {% endif %}
+                                                        {% endif %}
+                                                    {% endwith %}
+                                                        {% with node.shared_publication.publication.videos.all as videos %}
+                                                            {% if videos %}<br>
+                                                                <div class="row">
+                                                             {% for video in videos %}
+                                                                 <div class="col s4">
+                                                                     <video class="responsive-video" controls loop>
+                                                                         <source src="{{ video.video.url }}" type="video/mp4">
+                                                                     </video>
+                                                                 </div>
+                                                            {% endfor %}
+                                                                </div>
+                                                            {% endif %}
+                                                        {% endwith %}
                                                     {% if node.shared_publication.publication.extra_content %}
                                                         {% comment %} Para publicaciones con URL {% endcomment %}
                                                         {% if  node.shared_publication.publication.extra_content.video %}
